Working on the sidebar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,52 +52,57 @@
       <ul>
       <li><a href="/about/">Me</a></li>
       </ul>
-    	<li>Physics Blogs &amp; Reference</li>
-    	<ul>
-    	<li><a href="http://www.preposterousuniverse.com/blog/">Sean Carroll</a></li>
-    	<li><a href="http://johncarlosbaez.wordpress.com/">Azimuth</a></li>
-    	<li><a href="http://www.slate.com/blogs/bad_astronomy.html">Bad Astronomy</a></li>
-    	<li><a href="http://profmattstrassler.com/">Of Particular Significance</a></li>
-    	<li><a href="http://www.math.columbia.edu/~woit/wordpress/">Not Even Wrong</a></li>
-    	<li><a href="http://resonaances.blogspot.com.au/">Resonaances</a></li>
-    	<li><a href="http://backreaction.blogspot.com.au/">Backreaction</a></li>
-    	<li><a href="http://www.science20.com/quantum_diaries_survivor">A Quantum Diaries Survivor</a></li>
-    	<li><a href="http://physics.stackexchange.com/">Physics Stack Exchange</a></li>
-    	<li><a href="http://pdg.lbl.gov/index.html">PDG: Reviews of Particle Physics</a></li>
-    	<li><a href="http://arxiv.org/">Arxiv</a></li>
-    	<li><a href="http://blog.vixra.org/">Vixra</a></li>
-    	</ul>
-    	<li>Christianity &amp; Social Conscience</li>
-    	<ul>
-    	<li><a href="http://www.patheos.com/blogs/slacktivist/">Slacktivist</a></li>
-    	<li><a href="http://www.patheos.com/blogs/peterenns/">Peter Enns</a></li>
-    	<li><a href="http://experimentaltheology.blogspot.com.au/">Experimental Theology</a></li>
-    	<li><a href="http://www.carlmedearis.com/blog/">Carl Medearis</a></li>
-    	<li><a href="http://brianmclaren.net/">Brian McLaren</a></li>
-    	<li><a href="http://rachelheldevans.com/blog">Rachel Held Evans</a></li>
-    	<li><a href="http://www.patheos.com/blogs/jesuscreed/">Jesus Creed</a></li>
-    	</ul>
-    	<li>Games &amp; Youtubers</li>
-    	<ul>
-    	<li><a href="http://www.kerbalspaceprogram.com/index.php">Kerbal Space Program</a></li>
-    	<li><a href="http://www.youtube.com/user/szyzyg">Scott Manley</a></li>
-    	<li><a href="http://www.youtube.com/user/TheWinterOwl">The Winter Owl</a></li>
-    	<li><a href="http://www.youtube.com/user/Blitzkriegsler">Blitzkriegsler</a></li>
-    	<li><a href="http://www.youtube.com/user/xPDxTV">Play Daily TV</a></li>
-    	<li><a href="http://www.youtube.com/user/SideStrafe">SideStrafe</a></li>
-    	<li><a href="http://www.youtube.com/user/FRANKIEonPCin1080p">FRANKIEonPCin1080p</a></li>
-    	<li><a href="http://www.youtube.com/user/quill18">Quill18</a></li>
-    	</ul>
-    	<li>Comics</li>
-    	<ul>
-    	<li><a href="http://xkcd.com/">xkcd</a> (<a href="http://what-if.xkcd.com/">What If?</a>)</li>
-    	<li><a href="http://theoatmeal.com/comics">The Oatmeal</a></li>
-    	</ul>
+        <li>Physics Blogs &amp; Reference</li>
+        <ul>
+            <li><a href="http://www.preposterousuniverse.com/blog/">Sean Carroll</a></li>
+            <li><a href="http://johncarlosbaez.wordpress.com/">Azimuth</a></li>
+            <li><a href="http://www.slate.com/blogs/bad_astronomy.html">Bad Astronomy</a></li>
+            <li><a href="http://profmattstrassler.com/">Of Particular Significance</a></li>
+            <li><a href="http://www.math.columbia.edu/~woit/wordpress/">Not Even Wrong</a></li>
+            <li><a href="http://resonaances.blogspot.com.au/">Resonaances</a></li>
+            <li><a href="http://backreaction.blogspot.com.au/">Backreaction</a></li>
+            <li><a href="http://www.science20.com/quantum_diaries_survivor">A Quantum Diaries Survivor</a></li>
+            <li><a href="http://physics.stackexchange.com/">Physics Stack Exchange</a></li>
+            <li><a href="http://pdg.lbl.gov/index.html">PDG: Reviews of Particle Physics</a></li>
+            <li><a href="http://arxiv.org/">Arxiv</a></li>
+            <li><a href="http://blog.vixra.org/">Vixra</a></li>
+        </ul>
+        <li>Christianity &amp; Social Conscience</li>
+        <ul>
+            <li><a href="http://cac.org/">The Center for Action and Contemplation</a></li>
+            <li><a href="http://www.patheos.com/blogs/slacktivist/">Slacktivist</a></li>
+            <li><a href="http://www.patheos.com/blogs/peterenns/">Peter Enns</a></li>
+            <li><a href="http://experimentaltheology.blogspot.com.au/">Experimental Theology</a></li>
+            <li><a href="http://www.carlmedearis.com/blog/">Carl Medearis</a></li>
+            <li><a href="http://brianmclaren.net/">Brian McLaren</a></li>
+            <li><a href="http://rachelheldevans.com/blog">Rachel Held Evans</a></li>
+            <li><a href="http://www.patheos.com/blogs/jesuscreed/">Jesus Creed</a></li>
+        </ul>
+        <li>Charities &amp; Community Orgs</li>
+        <ul>
+            <li><a href="http://givedirectly.org/">GiveDirectly</a></li>
+        </ul>
+        <li>Games &amp; Youtubers</li>
+        <ul>
+            <li><a href="http://www.kerbalspaceprogram.com/index.php">Kerbal Space Program</a></li>
+            <li><a href="http://www.youtube.com/user/szyzyg">Scott Manley</a></li>
+            <li><a href="http://www.youtube.com/user/Blitzkriegsler">Blitzkriegsler</a></li>
+            <li><a href="http://www.youtube.com/user/quill18">Quill18</a></li>
+            <li><a href="http://www.youtube.com/user/EnterElysium">EnterElysium</a></li>
+            <li><a href="http://youtube.com/SplatterCatGaming">SplatterCatGaming</a></li>
+        </ul>
+        <li>Comics</li>
+        <ul>
+            <li><a href="http://xkcd.com/">xkcd</a> (<a href="http://what-if.xkcd.com/">What If?</a>)</li>
+            <li><a href="http://theoatmeal.com/comics">The Oatmeal</a></li>
+            <li><a href="http://freefall.purrsia.com">Freefall</a></li>
+        </ul>
       <li>Feed</li>
       <ul>
-      <li><a href="/atom.xml"><img alt="Atom feed" src="/images/Feed-icon.svg" width="32" height="32"/></a></li>
-      <li>            <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/MikeBsPhysics" data-widget-id="589824863197499392">Tweets by @MikeBsPhysics</a>
-            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+          <li><a href="/atom.xml"><img alt="Atom feed" src="/images/Feed-icon.svg" width="32" height="32"/></a></li>
+          <li>
+              <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/MikeBsPhysics" data-widget-id="589824863197499392">Tweets by @MikeBsPhysics</a>
+              <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
           </li>
       </ul>
     </ul>
