Paypal.me link in sidebar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,6 +81,7 @@
         <li>Charities &amp; Community Orgs</li>
         <ul>
             <li><a href="http://givedirectly.org/">GiveDirectly</a></li>
+            <li><a href="http://paypal.me/MBrown508">Me! (My personal Paypal tip jar)</a></li>
         </ul>
         <li>Games &amp; Youtubers</li>
         <ul>
