--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,6 +33,17 @@
       <h1><a class="header-link" href="/index.html">(Mis)anthropic selection</a></h1>
       <h2>Life, the universe and everything (and nothing) from the point of view of a physics grad student</h2>
       <img src="/images/banner1.png" alt="site banner"/>
+      <h3>
+          <ul>
+              <li><a href="/about/">About Me</a></li>
+              <li><a href="/">All posts</a></li>
+              <li><a href="#">Research</a></li>
+              <li><a href="#">Physics</a></li>
+              <li><a href="#">Life &amp; spirit</a></li>
+              <li><a href="#">Writing</a></li>
+              <li><a href="#">Music</a></li>
+          </ul>
+      </h3>
     </hgroup>
   </header>
   <section id="content">
@@ -48,10 +59,6 @@
       </hgroup>
     </header>
     <ul>
-      <li>About</li>
-      <ul>
-      <li><a href="/about/">Me</a></li>
-      </ul>
         <li>Physics Blogs &amp; Reference</li>
         <ul>
             <li><a href="http://www.preposterousuniverse.com/blog/">Sean Carroll</a></li>
